--- a/www-src/dataplay-ui/app/views/charts/lineRanged.html
+++ b/www-src/dataplay-ui/app/views/charts/lineRanged.html
@@ -1,4 +1,5 @@
 <div class="dc-chart chartSwitch line"
+	id="lineRanged"
 	ng-if="chart.type == 'line'"
 
 	dc-chart="lineChart"
@@ -17,6 +18,8 @@
 
 	dc-render-data-points="true"
 	dc-render-area="true"
+	dc-render-horizontal-grid-lines="true"
+	dc-render-vertical-grid-lines="true"
 
 	dc-range-chart="lineChartRange"
 
