Moved Related & Correlated chart rendering into different folders.

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -7,11 +7,11 @@
 	<div class="row">
 		<div class="col-md-12"><a class="btn btn-warning pull-right" ng-click="resetAll()">Reset all</a></div>
 		<div class="col-md-12" ng-switch="chart.type">
-			<span ng-include="'views/charts/lineRanged.html'"></span>
-			<span ng-include="'views/charts/row.html'"></span>
-			<span ng-include="'views/charts/column.html'"></span>
-			<span ng-include="'views/charts/pie.html'"></span>
-			<span ng-include="'views/charts/bubble.html'"></span>
+			<span ng-include="'views/charts/related/lineRanged.html'"></span>
+			<span ng-include="'views/charts/related/row.html'"></span>
+			<span ng-include="'views/charts/related/column.html'"></span>
+			<span ng-include="'views/charts/related/pie.html'"></span>
+			<span ng-include="'views/charts/related/bubble.html'"></span>
 		</div>
 	</div>
 </div>
