--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -1,16 +1,17 @@
 <!-- Smart Caching -->
-<span ng-include="'views/charts/line.html'"></span>
-<span ng-include="'views/charts/row.html'"></span>
-<span ng-include="'views/charts/column.html'"></span>
-<span ng-include="'views/charts/pie.html'"></span>
-<span ng-include="'views/charts/bubble.html'"></span>
+<span ng-include="'views/charts/related/line.html'"></span>
+<span ng-include="'views/charts/related/row.html'"></span>
+<span ng-include="'views/charts/related/column.html'"></span>
+<span ng-include="'views/charts/related/pie.html'"></span>
+<span ng-include="'views/charts/related/bubble.html'"></span>
 
 <div class="overview">
 	<h1>Overview</h1> <em>of</em> <h4>"{{params.id}}"</h4>
 
 	<a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a>
 
-	<div class="row" ng-init="getRelatedCharts()">
+	<!-- Related -->
+	<!-- <div class="row" ng-init="getRelatedCharts()">
 		<div class="col-md-4" ng-repeat="chart in chartsRelated" id="{{chart.id}}" ng-show="chartsRelated.length > 0">
 			<a ng-href="/charts/{{params.id}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}" ng-hide="chart.type == 'bubble'">
 				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4></span>
@@ -19,11 +20,11 @@
 				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4> <h5>vs</h5> <h4>{{chart.zLabel}}</h4></span>
 			</a>
 
-			<span ng-include="'views/charts/line.html'"></span>
-			<span ng-include="'views/charts/row.html'"></span>
-			<span ng-include="'views/charts/column.html'"></span>
-			<span ng-include="'views/charts/pie.html'"></span>
-			<span ng-include="'views/charts/bubble.html'"></span>
+			<span ng-include="'views/charts/related/line.html'"></span>
+			<span ng-include="'views/charts/related/row.html'"></span>
+			<span ng-include="'views/charts/related/column.html'"></span>
+			<span ng-include="'views/charts/related/pie.html'"></span>
+			<span ng-include="'views/charts/related/bubble.html'"></span>
 
 			<div class="chartSwitch" ng-if="!isPlotAllowed(chart.type)">
 				<div class="well text-center">Oops! nothing to plot.</div>
@@ -35,7 +36,20 @@
 		<div class="col-md-12">
 			<a id="getRelated" href="#" class="btn btn-default btn-block" ng-click="getRelated()" ng-hide="limit.related">Show more ({{max.related - offset.related}}) <span class="caret"></span></a>
 		</div>
-	</div>
+	</div> -->
 
-	<div class="row" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()"></div>
+	<hr/>
+
+	<!-- Correlated -->
+	<div class="row" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()">
+		<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.id}}" ng-show="chartsCorrelated.length > 0">
+			<span ng-include="'views/charts/correlated/line.html'"></span>
+		</div>
+
+		<div class="col-md-12" ng-show="loading.correlated" ng-include="'views/loader.html'"></div>
+
+		<div class="col-md-12">
+			<a id="getCorrelated" href="#" class="btn btn-default btn-block" ng-click="getCorrelated()" ng-hide="limit.correlated">Show more ({{max.correlated - offset.correlated}}) <span class="caret"></span></a>
+		</div>
+	</div>
 </div>
