Separated new observation points from existing observation into stack.
- Ability to Add/Remove/Reset observation points

- API for passing message (optional) to observation data

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="pull-right">
-				<a href="#" class="btn btn-success" ng-show="observations.length > 0" ng-click="saveObservations()">Save observations</a>
+				<a href="#" class="btn btn-success" ng-show="observations.length" ng-click="saveObservations()">Save observations ({{observations.length}})</a>
 				<a href="#" class="btn btn-warning" ng-click="resetAll()">Reset changes</a>
 			</div>
 		</div>
