--- a/www-src/dataplay-ui/app/views/charts/correlated/bubble.html
+++ b/www-src/dataplay-ui/app/views/charts/correlated/bubble.html
@@ -14,8 +14,8 @@
 	dc-render-label="false"
 	dc-render-title="true"
 
-	dc-x-axis-label="chart.xLabel"
-	dc-y-axis-label="chart.yLabel"
+	dc-x-axis-label="data.table1.xLabel"
+	dc-y-axis-label="chart.table1.yLabel"
 
 	dc-post-setup-chart="bubbleChartPostSetup"
 ></div>
