--- a/www-src/dataplay-ui/app/views/charts/correlated/row.html
+++ b/www-src/dataplay-ui/app/views/charts/correlated/row.html
@@ -13,8 +13,8 @@
 	dc-transition-duration="500"
 	dc-colors="d3.scale.category20()"
 
-	dc-x-axis-label="chart.xLabel"
-	dc-y-axis-label="chart.yLabel"
+	dc-x-axis-label="chart.table1.xLabel"
+	dc-y-axis-label="chart.table1.yLabel"
 
 	dc-post-setup-chart="rowChartPostSetup"
 ></div>
