Improved chart registry and view classes.
- Service:Overview Removed Chart Registry offset handler.

- Controller:Home Removed Registry updater.

- Controller:Overview/Related Added new method for chart identification.

- Controller:Overview/Correlated Added new method for chart identification.

--- a/www-src/dataplay-ui/app/views/charts/correlated/bubble.html
+++ b/www-src/dataplay-ui/app/views/charts/correlated/bubble.html
@@ -1,5 +1,7 @@
-<div class="chartSwitch"
+<div class="dc-chart chartSwitch bubble"
 	ng-if="chart.type == 'bubble'"
+
+	id="{{chart.id}}"
 
 	dc-chart="bubbleChart"
 
