--- a/www-src/dataplay-ui/app/views/charts/correlated/line.html
+++ b/www-src/dataplay-ui/app/views/charts/correlated/line.html
@@ -1,6 +1,8 @@
 <div class="dc-chart chartSwitch line"
 	ng-if="chart.type == 'line'"
 
+	id="{{chart.id}}"
+
 	dc-chart="lineChart"
 
 	dc-width="{{width}}"
