--- a/www-src/dataplay-ui/app/views/charts/related/bubble.html
+++ b/www-src/dataplay-ui/app/views/charts/related/bubble.html
@@ -1,5 +1,7 @@
-<div class="chartSwitch"
+<div class="dc-chart chartSwitch bubble"
 	ng-if="chart.type == 'bubble'"
+
+	id="{{chart.id}}"
 
 	dc-chart="bubbleChart"
 
