--- a/www-src/dataplay-ui/app/views/charts/related/column.html
+++ b/www-src/dataplay-ui/app/views/charts/related/column.html
@@ -1,5 +1,7 @@
-<div class="chartSwitch"
+<div class="dc-chart chartSwitch column"
 	ng-if="chart.type == 'column'"
+
+	id="{{chart.id}}"
 
 	dc-chart="barChart"
 
