--- a/www-src/dataplay-ui/app/views/charts/related/lineRanged.html
+++ b/www-src/dataplay-ui/app/views/charts/related/lineRanged.html
@@ -1,6 +1,7 @@
 <div class="dc-chart chartSwitch line"
-	id="lineRanged"
 	ng-if="chart.type == 'line'"
+
+	id="{{chart.id}}"
 
 	dc-chart="lineChart"
 
