--- a/www-src/dataplay-ui/app/views/charts/related/pie.html
+++ b/www-src/dataplay-ui/app/views/charts/related/pie.html
@@ -1,5 +1,7 @@
-<div class="chartSwitch"
+<div class="dc-chart chartSwitch pie"
 	ng-if="chart.type == 'pie'"
+
+	id="{{chart.id}}"
 
 	dc-chart="pieChart"
 
