--- a/www-src/dataplay-ui/app/views/charts/related/row.html
+++ b/www-src/dataplay-ui/app/views/charts/related/row.html
@@ -1,5 +1,7 @@
-<div class="chartSwitch"
+<div class="dc-chart chartSwitch row"
 	ng-if="chart.type == 'row' || chart.type == 'bar'"
+
+	id="{{chart.id}}"
 
 	dc-chart="rowChart"
 
