Text changes on Home page. Correlation error handler.

--- a/www-src/dataplay-ui/app/views/home.html
+++ b/www-src/dataplay-ui/app/views/home.html
@@ -13,8 +13,8 @@
 </div>
 
 <div ng-show="lastVisited.length <= 0">
-	<p>It looks pretty lonley here!</p>
-	<p>Why don't you go and view some data that you are interseted in?</p>
+	<p>It looks pretty lonely here!</p>
+	<p>Why don't you go and view some data that you are interested in?</p>
 </div>
 
 <p>
