--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -57,3 +57,16 @@
 		}
 	}
 }
+
+.modal-content {
+	padding: 0 10px 10px 10px;
+
+	.comment-modal-buttons {
+		margin: 5px 0 0 0;
+		text-align: right;
+
+		button {
+			outline: none;
+		}
+	}
+}
