--- a/www-src/dataplay-ui/app/views/register.html
+++ b/www-src/dataplay-ui/app/views/register.html
@@ -1,8 +1,13 @@
 <form name="registerForm" class="form-signin" role="form" ng-controller="UserCtrl" ng-submit="register(user)" novalidate>
-	<alert ng-show="hasError()" type="danger" close="closeAlert()">{{user.message}}</alert>
+	<div ng-show="hasError()" class="alert alert-dismissable alert-danger">
+		<button type="button" class="close" ng-click="closeAlert()">×</button>
+		{{user.message}}
+	</div>
+
 	<div class="form-group" ng-class="{'has-error': registerForm.username.$invalid && !registerForm.username.$pristine}">
-		<input class="form-control" name="username" type="text" placeholder="Username" ng-required="true" ng-model="user.username" autocomplete="off" />
-		<p data-ng-show="registerForm.username.$invalid && !registerForm.username.$pristine" class="help-block">Required</p>
+		<input class="form-control" name="username" type="email" placeholder="Email" ng-required="true" ng-model="user.username" autocomplete="off" />
+		<p data-ng-show="registerForm.username.$error.required && !registerForm.username.$pristine" class="help-block">Required</p>
+		<p data-ng-show="registerForm.username.$error.email && !registerForm.username.$pristine" class="help-block">Not a valid email!</p>
 	</div>
 	<div class="form-group" ng-class="{'has-error': registerForm.password.$invalid && !registerForm.password.$pristine}">
 		<input class="form-control" name="password" type="password" placeholder="Password" ng-required="true" ng-model="user.password" autocomplete="off" />
