Stop sidebar going below fold, and say when there's nothing to display

--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -43,7 +43,7 @@ body > .container {
 	display: block;
 	position: fixed;
 	background-color: #F8FAFC;
-	height: 100%;
+	height: calc(~"100% - 60px");
 	right: 0;
 	overflow-y: scroll;
 	padding: 0;
@@ -127,4 +127,11 @@ body > .container {
 			color: #7F7F7F;
 		}
 	}
+}
+
+.uo-nothing {
+	margin: 0 2px;
+	color: #ADADAD;
+	font-size: 12px;
+	text-align: center;
 }
