--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -27,6 +27,7 @@
 				</div>
 
 			</div>
+			<div class="row uo-nothing" ng-hide="userObservations.length > 0"><p>Nothing to show</p></div>
 		</div>
 		<div class="col-md-9">
 			<div class="pull-right">
