Make up/down vote buttons clickable

--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -97,6 +97,10 @@ body > .container {
 				width: 100%;
 				text-align: center;
 			}
+
+			i.glyphicon {
+				cursor: pointer;
+			}
 		}
 
 		.uo-userinfo {
