--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -45,7 +45,7 @@ body > .container {
 	background-color: #F8FAFC;
 	height: calc(~"100% - 60px");
 	right: 0;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding: 0;
 }
 
