--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -43,12 +43,40 @@
 			<span ng-include="'views/charts/related/pie.html'"></span>
 			<span ng-include="'views/charts/related/bubble.html'"></span>
 		</div>
-		<div class="col-md-3">
-			<div class="chart-title"><h1>{{chart.title}}</h1></div>
-			<div class="chart-info pull-right">
-				<div class="well well-sm">
-					<h5 ng-bind-html="chart.description"></h5>
+		<div class="col-md-3 chartinfo">
+			<div class="row ci-row" ng-show="info.patternId">
+				<div class="col-sm-6 ci-key">Pattern ID</div>
+				<div class="col-sm-6 ci-val">{{info.patternId}}</div>
+			</div>
+			<div class="row ci-row" ng-show="info.discoverer">
+				<div class="col-sm-6 ci-key">Discovered by</div>
+				<div class="col-sm-6 ci-val">{{info.discoverer}}</div>
+			</div>
+			<div class="row ci-row" ng-show="info.discoverDate">
+				<div class="col-sm-6 ci-key">Date discovered</div>
+				<div class="col-sm-6 ci-val">{{info.discoverDate}}</div>
+			</div>
+			<div class="row ci-row" ng-show="info.validators.length > 0">
+				<div class="col-sm-6 ci-key">Validated by</div>
+				<div class="col-sm-6 ci-val">
+					<span class="csl" ng-repeat="vldtr in info.validators">{{vldtr}}</span>
 				</div>
+			</div>
+			<div class="row ci-row" ng-show="info.source.prim">
+				<div class="col-sm-6 ci-key">Primary datasource</div>
+				<div class="col-sm-6 ci-val">{{info.source.prim}}</div>
+			</div>
+			<div class="row ci-row" ng-show="info.source.seco">
+				<div class="col-sm-6 ci-key">Secondary datasource</div>
+				<div class="col-sm-6 ci-val">{{info.source.seco}}</div>
+			</div>
+			<div class="row ci-row" ng-show="info.strength">
+				<div class="col-sm-6 ci-key">Statistical strength</div>
+				<div class="col-sm-6 ci-val">{{info.strength}}</div>
+			</div>
+			<div class="row ci-row">
+				<div class="col-sm-6 ci-key">Observations</div>
+				<div class="col-sm-6 ci-val">{{userObservations.length}}</div>
 			</div>
 		</div>
 	</div>
