--- a/www-src/dataplay-ui/app/views/header.html
+++ b/www-src/dataplay-ui/app/views/header.html
@@ -13,8 +13,8 @@
 			<li ng-class="{active: isActive('/')}" ng-show="Auth.isAuthenticated()"><a href="/">Home</a></li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
-			<li ng-class="{active: isActive('/login')}" ng-hide="Auth.isAuthenticated()"><a ng-href="/login">Login</a></li>
-			<li ng-class="{active: isActive('/register')}" ng-hide="Auth.isAuthenticated()"><a ng-href="/register">Register</a></li>
+			<li ng-class="{active: isActive('/user/login')}" ng-hide="Auth.isAuthenticated()"><a ng-href="/user/login">Login</a></li>
+			<li ng-class="{active: isActive('/user/register')}" ng-hide="Auth.isAuthenticated()"><a ng-href="/user/register">Register</a></li>
 			<li ng-show="Auth.isAuthenticated()"><a href="#" ng-controller="UserCtrl" ng-click="logout()">Logout</a></li>
 		</ul>
 	</div><!--/.nav-collapse -->
