--- a/www-src/dataplay-ui/app/views/user/login.html
+++ b/www-src/dataplay-ui/app/views/user/login.html
@@ -17,6 +17,6 @@
 		<button type="submit" class="btn btn-primary btn-block" value="Login" title="Login" ng-disabled="!loginForm.$valid"><span>Login</span></button>
 	</div>
 	<div class="form-group">
-		<a href="#" ng-href="/forgot-password">Forgot your password?</a>
+		<a href="#" ng-href="/user/forgotpassword">Forgot your password?</a>
 	</div>
 </form>
