Moved chart page content into separate views. Better observations UI.

--- a/www-src/dataplay-ui/app/views/charts/related/lineRanged.html
+++ b/www-src/dataplay-ui/app/views/charts/related/lineRanged.html
@@ -27,6 +27,8 @@
 	dc-post-setup-chart="lineChartPostSetup"
 ></div>
 
+<a ng-show="chart.type == 'line'" href="#" class="pull-right" ng-click="resetAll()">Reset</a>
+
 <div class="dc-chart chartSwitch range"
 	ng-show="chart.type == 'line'"
 
