--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -39,103 +39,9 @@ body > .container {
 	}
 }
 
-#sidebar {
-	display: block;
-	position: fixed;
-	background-color: #F8FAFC;
-	height: calc(~"100% - 60px");
-	right: 0;
-	overflow-y: auto;
-	padding: 0;
-}
-
-.user-observation-title {
-	width: 100%;
-	margin: 0 0 5px 0;
-	background-color: #A0B6CB;
-	color: white;
-	font-weight: bold;
-	font-size: 13px;
-	padding: 6px 10px;
-}
-
-.user-observation {
-	width: 100%;
-	font-size: 12px;
-	padding: 0 10px;
-	margin: 0 0 15px 0;
-
-	&:last-child {
-		margin-bottom: 0;
-	}
-
-	.uo-date {
-		margin: 0 0 5px 0;
-		color: #ADADAD;
-
-		hr {
-			margin: 9px 0 -9px 0;
-		}
-
-		date {
-			background-color: #F8FAFC;
-			margin: 8px 0;
-			padding: 0 8px 0 0;
-		}
-	}
-
-
-	.uo-mainblock {
-		.uo-leftcontrols {
-			font-size: 15px;
-			float: left;
-			width: 32px;
-			text-align: center;
-			color: #C6C6C6;
-
-			> * {
-				width: 100%;
-				text-align: center;
-			}
-
-			i.glyphicon {
-				cursor: pointer;
-			}
-		}
-
-		.uo-userinfo {
-			margin-left: 38px;
-
-			.uo-name {
-				font-size: 12px;
-				color: #464646;
-				text-decoration: none;
-				font-weight: bold;
-			}
-
-			.uo-score {
-				font-size: 12px;
-				margin-left: 5px;
-				color: #F39C12;
-			}
-
-			.uo-discoverer {
-				margin-left: 5px;
-				background-color: #CAA8D9;
-			}
-		}
-
-		.uo-message {
-			margin-left: 38px;
-			font-size: 12px;
-			color: #7F7F7F;
-		}
-	}
-}
-
-.uo-nothing {
-	margin: 0 2px;
-	color: #ADADAD;
-	font-size: 12px;
-	text-align: center;
+.glyphicon-flip {
+	transform: scaleX(-1);
+	-moz-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	-ms-transform: scaleX(-1);
 }
