--- a/www-src/dataplay-ui/app/views/charts/observations.html
+++ b/www-src/dataplay-ui/app/views/charts/observations.html
@@ -79,3 +79,5 @@
 		Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 	</div>
 </div>
+
+<div class="nothing" ng-hide="userObservations.length > 0"><p>Nothing to show</p></div>
