--- a/www-src/dataplay-ui/app/views/charts/observations.html
+++ b/www-src/dataplay-ui/app/views/charts/observations.html
@@ -1,7 +1,7 @@
 <div class="title">Observations</div>
 
 <div class="media content" ng-repeat="obsv in userObservations">
-	<a class="left pull-left" href="#">
+	<span class="left pull-left">
 		<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
 
 		<div class="votes">
@@ -9,74 +9,10 @@
 			<span>{{obsv.validationCount}}</span>
 			<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
 		</div>
-	</a>
+	</span>
 	<div class="media-body">
-		<h4 class="media-heading">Media heading</h4>
-		Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-	</div>
-</div>
-
-<div class="media content" ng-repeat="obsv in userObservations">
-	<a class="left pull-left" href="#">
-		<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
-
-		<div class="votes">
-			<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
-			<span>{{obsv.validationCount}}</span>
-			<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
-		</div>
-	</a>
-	<div class="media-body">
-		<h4 class="media-heading">Media heading</h4>
-		Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-	</div>
-</div>
-
-<div class="media content" ng-repeat="obsv in userObservations">
-	<a class="left pull-left" href="#">
-		<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
-
-		<div class="votes">
-			<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
-			<span>{{obsv.validationCount}}</span>
-			<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
-		</div>
-	</a>
-	<div class="media-body">
-		<h4 class="media-heading">Media heading</h4>
-		Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-	</div>
-</div>
-
-<div class="media content" ng-repeat="obsv in userObservations">
-	<a class="left pull-left" href="#">
-		<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
-
-		<div class="votes">
-			<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
-			<span>{{obsv.validationCount}}</span>
-			<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
-		</div>
-	</a>
-	<div class="media-body">
-		<h4 class="media-heading">Media heading</h4>
-		Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-	</div>
-</div>
-
-<div class="media content" ng-repeat="obsv in userObservations">
-	<a class="left pull-left" href="#">
-		<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
-
-		<div class="votes">
-			<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
-			<span>{{obsv.validationCount}}</span>
-			<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
-		</div>
-	</a>
-	<div class="media-body">
-		<h4 class="media-heading">Media heading</h4>
-		Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+		<h4 class="media-heading">{{obsv.user.name}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span></h4>
+		{{obsv.message}}
 	</div>
 </div>
 
