Correlated Charts API changes and UI fixes.

--- a/www-src/dataplay-ui/app/views/charts/correlated/lineRanged.html
+++ b/www-src/dataplay-ui/app/views/charts/correlated/lineRanged.html
@@ -15,7 +15,7 @@
 	dc-transition-duration="500"
 	dc-colors="d3.scale.category20()"
 
-	dc-y-axis-label="chart.yLabel"
+	dc-y-axis-label="chart.table1.yLabel"
 
 	dc-render-data-points="true"
 	dc-render-area="true"
@@ -26,6 +26,8 @@
 
 	dc-post-setup-chart="lineChartPostSetup"
 ></div>
+
+<a ng-show="chart.type == 'line'" href="#" class="pull-right" ng-click="resetAll()">Reset</a>
 
 <div class="dc-chart chartSwitch range"
 	ng-show="chart.type == 'line'"
@@ -42,7 +44,7 @@
 	dc-center-bar="true"
 	dc-transition-duration="0"
 
-	dc-x-axis-label="chart.xLabel"
+	dc-x-axis-label="chart.table1.xLabel"
 
 	dc-post-setup-chart="rangeChartPostSetup"
 ></div>
