--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -9,18 +9,28 @@
 	</div>
 
 	<div class="row">
-		<div class="col-md-6 constrict-graphs" ng-switch="chart.type">
+		<div class="col-md-6 constrict-graphs">
 			<div class="action-bar">
 				<a href="#" ng-href="/overview/{{params.id}}" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-share-alt glyphicon-flip"></span> Go Back</a>
 			</div>
 
 			<div>{{chart.title}}</div>
 
-			<span ng-include="'views/charts/related/lineRanged.html'"></span>
-			<span ng-include="'views/charts/related/row.html'"></span>
-			<span ng-include="'views/charts/related/column.html'"></span>
-			<span ng-include="'views/charts/related/pie.html'"></span>
-			<span ng-include="'views/charts/related/bubble.html'"></span>
+			<div ng-if="mode == 'related'" ng-switch="chart.type">
+				<span ng-include="'views/charts/related/lineRanged.html'"></span>
+				<span ng-include="'views/charts/related/row.html'"></span>
+				<span ng-include="'views/charts/related/column.html'"></span>
+				<span ng-include="'views/charts/related/pie.html'"></span>
+				<span ng-include="'views/charts/related/bubble.html'"></span>
+			</div>
+
+			<div ng-if="mode == 'correlated'" ng-switch="chart.type">
+				<span ng-include="'views/charts/correlated/lineRanged.html'"></span>
+				<span ng-include="'views/charts/correlated/row.html'"></span>
+				<span ng-include="'views/charts/correlated/column.html'"></span>
+				<span ng-include="'views/charts/correlated/pie.html'"></span>
+				<span ng-include="'views/charts/correlated/bubble.html'"></span>
+			</div>
 		</div>
 
 		<div class="col-md-3 info" ng-include="'views/charts/info.html'"></div>
