URL Routes changes.

--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -4,6 +4,11 @@
 <span ng-include="'views/charts/related/column.html'"></span>
 <span ng-include="'views/charts/related/pie.html'"></span>
 <span ng-include="'views/charts/related/bubble.html'"></span>
+<span ng-include="'views/charts/correlated/line.html'"></span>
+<span ng-include="'views/charts/correlated/row.html'"></span>
+<span ng-include="'views/charts/correlated/column.html'"></span>
+<span ng-include="'views/charts/correlated/pie.html'"></span>
+<span ng-include="'views/charts/correlated/bubble.html'"></span>
 
 <div class="overview">
 	<h1>Overview</h1> <em>of</em> <h4>"{{params.id}}"</h4>
