Add functionality to validate chart buttons

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -68,6 +68,7 @@
 
 	.breadcrumb, .action-bar {
 		margin-bottom: 10.5px;
+
 	}
 
 	.fixed {
@@ -75,6 +76,13 @@
 	}
 
 	.info {
+		.action-bar {
+			text-align: center;
+			button {
+				margin-bottom: 2px;
+			}
+		}
+
 		.ci-row {
 			margin-left: 0;
 			margin-right: 0;
