--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -45,3 +45,11 @@ body > .container {
 	-webkit-transform: scaleX(-1);
 	-ms-transform: scaleX(-1);
 }
+
+.tab-content {
+	margin-top: 10px;
+
+	.form-group {
+		margin: 10px 0;
+	}
+}
