--- a/www-src/dataplay-ui/app/views/user/profile.html
+++ b/www-src/dataplay-ui/app/views/user/profile.html
@@ -14,20 +14,23 @@
 
 	<div class="tab-content">
 		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'details']" id="details">
-			<div class="form-group" ng-class="{'has-error': profileForm.email.$invalid && !profileForm.email.$pristine}">
-				<p>Email Address</p>
-				<input class="form-control" name="email" type="email" ng-model="current.email" autocomplete="off" />
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					<div class="form-group" ng-class="{'has-error': profileForm.email.$invalid && !profileForm.email.$pristine}">
+						<p>Email Address</p>
+						<input class="form-control" name="email" type="email" ng-model="current.email" autocomplete="off" />
+					</div>
+					<div class="form-group" ng-class="{'has-error': profileForm.username.$invalid && !profileForm.username.$pristine}">
+						<p
+						>Username</p>
+						<input class="form-control" name="username" type="username" ng-model="current.username" autocomplete="off" />
+					</div>
+					<div class="form-group text-center">
+						<button class="btn btn-default" value="Revert Changes" title="Revert Changes" ng-click="clearDetails()"><span>Revert Changes</span></button>
+						<button class="btn btn-primary" value="Save Changes" title="Save Changes" ng-disabled="!profileForm.$valid" ng-click="submitDetails()"><span>Save Changes</span></button>
+					</div>
+				</div>
 			</div>
-			<div class="form-group" ng-class="{'has-error': profileForm.username.$invalid && !profileForm.username.$pristine}">
-				<p
-				>Username</p>
-				<input class="form-control" name="username" type="username" ng-model="current.username" autocomplete="off" />
-			</div>
-			<div class="form-group text-center">
-				<button class="btn btn-default" value="Revert Changes" title="Revert Changes" ng-click="clearDetails()"><span>Revert Changes</span></button>
-				<button class="btn btn-primary" value="Save Changes" title="Save Changes" ng-disabled="!profileForm.$valid" ng-click="submitDetails()"><span>Save Changes</span></button>
-			</div>
-
 		</div>
 		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'validdiscoveries']" id="validdiscoveries">
 			<div class="row">
