Improve how "Nothing to show" appears

--- a/www-src/dataplay-ui/app/views/charts/observations.html
+++ b/www-src/dataplay-ui/app/views/charts/observations.html
@@ -16,4 +16,4 @@
 	</div>
 </div>
 
-<div class="nothing" ng-hide="userObservations.length > 0"><p>Nothing to show</p></div>
+<div class="nothing" ng-hide="userObservations.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
