Links update with URL and Chart overview page.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -22,6 +22,11 @@
 		margin-top: 20px;
 	}
 
+	a.related, a.correlated {
+		min-width: 350px;
+		min-height: 200px;
+	}
+
 	.dc-chart {
 		.pie-slice {
 			fill: #000000
