--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -8,6 +8,7 @@
 <!-- Correlated Charts -->
 <span ng-include="'views/charts/correlated/line.html'"></span>
 <span ng-include="'views/charts/correlated/row.html'"></span>
+<span ng-include="'views/charts/correlated/column.html'"></span>
 <span ng-include="'views/charts/correlated/stacked.html'"></span>
 <span ng-include="'views/charts/correlated/bubble.html'"></span>
 <span ng-include="'views/charts/correlated/scatter.html'"></span>
@@ -15,23 +16,20 @@
 <div class="overview">
 	<h1>Overview</h1> <em>of</em> <h4>"{{params.id}}"</h4>
 
-	<a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a>
+	<!-- <a class="btn btn-warning pull-right reset" ng-click="resetAll()">Reset all</a> -->
 
 	<!-- Related -->
-	<div class="row" ng-init="getRelatedCharts()">
-		<div class="col-md-4" ng-repeat="chart in chartsRelated" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
-			<a ng-href="/charts/related/{{params.id}}/{{chart.key}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}" ng-hide="chart.type == 'bubble'">
-				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4></span>
-			</a>
-			<a ng-href="/charts/related/{{params.id}}/{{chart.key}}/{{chart.type}}/{{chart.xLabel}}/{{chart.yLabel}}/{{chart.zLabel}}" ng-show="chart.type == 'bubble'">
-				<span><h4>{{chart.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.yLabel}}</h4> <h5>vs</h5> <h4>{{chart.zLabel}}</h4></span>
-			</a>
+	<div class="row related" ng-init="getRelatedCharts()">
+		<div class="col-md-12"><h4>Relation within <a href="#" ng-href="/overview/{{params.id}}">{{params.id}}</a></h4></div>
 
-			<span ng-include="'views/charts/related/line.html'"></span>
-			<span ng-include="'views/charts/related/row.html'"></span>
-			<span ng-include="'views/charts/related/column.html'"></span>
-			<span ng-include="'views/charts/related/pie.html'"></span>
-			<span ng-include="'views/charts/related/bubble.html'"></span>
+		<div class="col-md-4" ng-repeat="chart in chartsRelated" id="{{chart.id}}" ng-show="hasRelatedCharts() > 0">
+			<a class="related" href="#" ng-href="{{chart.url}}">
+				<span ng-include="'views/charts/related/line.html'"></span>
+				<span ng-include="'views/charts/related/row.html'"></span>
+				<span ng-include="'views/charts/related/column.html'"></span>
+				<span ng-include="'views/charts/related/pie.html'"></span>
+				<span ng-include="'views/charts/related/bubble.html'"></span>
+			</a>
 
 			<div class="chartSwitch" ng-if="!isPlotAllowed(chart.type)">
 				<div class="well text-center">Oops! nothing to plot.</div>
@@ -40,8 +38,14 @@
 
 		<div class="col-md-12" ng-show="loading.related" ng-include="'views/loader.html'"></div>
 
+		<div class="col-md-12" ng-show="!loading.related && hasRelatedCharts() <= 0">
+			<div class="jumbotron">
+				<p>Sorry we are unable to generate any Related data for given set.</p>
+			</div>
+		</div>
+
 		<div class="col-md-12">
-			<a id="getRelated" href="#" class="btn btn-default btn-block" ng-click="getRelated()" ng-hide="limit.related || loading.related">Show more ({{max.related - offset.related}}) <span class="caret"></span></a>
+			<a id="getRelated" href="#" class="btn btn-default btn-block" ng-click="getRelated()" ng-hide="limit.related || loading.related || hasRelatedCharts() <= 0">Show more ({{max.related - offset.related}}) <span class="caret"></span></a>
 		</div>
 	</div>
 
@@ -49,22 +53,33 @@
 
 	<!-- Correlated -->
 	<div class="row" ng-controller="OverviewCorrelatedCtrl" ng-init="getCorrelatedCharts()">
+		<div class="col-md-12"><h4>Correlation within <a href="#" ng-href="/overview/{{params.id}}">{{params.id}}</a></h4></div>
+
 		<div class="col-md-4" ng-repeat="chart in chartsCorrelated" id="{{chart.id}}" ng-show="hasCorrelatedCharts() > 0">
-			<a ng-href="/charts/correlated/{{params.id}}/{{chart.correlationid}}/{{chart.type}}/{{chart.table1.xLabel}}/{{chart.table1.yLabel}}">
-				<span><h4>{{chart.table1.xLabel}}</h4> <h5>vs</h5> <h4>{{chart.table1.yLabel}}</h4></span>
+			<a class="correlated" href="#" ng-href="{{chart.url}}">
+				<span ng-include="'views/charts/correlated/line.html'"></span>
+				<span ng-include="'views/charts/correlated/row.html'"></span>
+				<span ng-include="'views/charts/correlated/column.html'"></span>
+				<span ng-include="'views/charts/correlated/stacked.html'"></span>
+				<span ng-include="'views/charts/correlated/bubble.html'"></span>
+				<span ng-include="'views/charts/correlated/scatter.html'"></span>
 			</a>
 
-			<span ng-include="'views/charts/correlated/line.html'"></span>
-			<span ng-include="'views/charts/correlated/row.html'"></span>
-			<span ng-include="'views/charts/correlated/stacked.html'"></span>
-			<span ng-include="'views/charts/correlated/bubble.html'"></span>
-			<span ng-include="'views/charts/correlated/scatter.html'"></span>
+			<div class="chartSwitch" ng-if="!isPlotAllowed(chart.type)">
+				<div class="well text-center">Oops! nothing to plot.</div>
+			</div>
 		</div>
 
 		<div class="col-md-12" ng-show="loading.correlated" ng-include="'views/loader.html'"></div>
 
+		<div class="col-md-12" ng-show="!loading.correlated && hasCorrelatedCharts() <= 0">
+			<div class="jumbotron">
+				<p>Sorry we are unable to generate any Correlated data for given set.</p>
+			</div>
+		</div>
+
 		<div class="col-md-12">
-			<a id="getCorrelated" href="#" class="btn btn-default btn-block" ng-click="getCorrelated()" ng-hide="limit.correlated || loading.correlated">Show more ({{max.correlated - offset.correlated}}) <span class="caret"></span></a>
+			<a id="getCorrelated" href="#" class="btn btn-default btn-block" ng-click="getCorrelated()" ng-hide="limit.correlated || loading.correlated || hasCorrelatedCharts() <= 0">Show more ({{max.correlated - offset.correlated}}) <span class="caret"></span></a>
 		</div>
 	</div>
 </div>
