--- a/www-src/dataplay-ui/app/views/user/profile.html
+++ b/www-src/dataplay-ui/app/views/user/profile.html
@@ -16,14 +16,22 @@
 		<div ng-class="{true: 'tab-pane fade active in', false: 'tab-pane fade'}[currentTab == 'details']" id="details">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
+					<div ng-show="!hasError() && saved.success" class="alert alert-dismissable alert-success">
+						<button type="button" class="close" ng-click="closeAlert()">×</button>
+						Your profile details have been updated successfully.
+					</div>
+
 					<div class="form-group" ng-class="{'has-error': profileForm.email.$invalid && !profileForm.email.$pristine}">
 						<p>Email Address</p>
-						<input class="form-control" name="email" type="email" ng-model="current.email" autocomplete="off" />
+						<input class="form-control" name="email" type="email" ng-required="true" ng-model="current.email" autocomplete="off" />
+						<p data-ng-show="profileForm.email.$error.required && !profileForm.email.$pristine" class="help-block">Required</p>
+						<p data-ng-show="profileForm.email.$error.email && !profileForm.email.$pristine" class="help-block">Not a valid email!</p>
 					</div>
 					<div class="form-group" ng-class="{'has-error': profileForm.username.$invalid && !profileForm.username.$pristine}">
 						<p
 						>Username</p>
-						<input class="form-control" name="username" type="username" ng-model="current.username" autocomplete="off" />
+						<input class="form-control" name="username" type="username" ng-required="true" ng-model="current.username" autocomplete="off" />
+						<p data-ng-show="profileForm.username.$error.required && !profileForm.username.$pristine" class="help-block">Required</p>
 					</div>
 					<div class="form-group text-center">
 						<button class="btn btn-default" value="Revert Changes" title="Revert Changes" ng-click="clearDetails()"><span>Revert Changes</span></button>
