--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -35,7 +35,9 @@
 
 		<div class="col-md-3 info" ng-include="'views/charts/info.html'"></div>
 
-		<div class="col-md-3 observations" ng-include="'views/charts/observations.html'"></div>
+		<div class="col-md-3">
+			<div class="observations" ng-include="'views/charts/observations.html'"></div>
+		</div>
 
 	</div>
 </div>
