--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -1,6 +1,5 @@
 html {
 	position: relative;
-	min-height: 100%;
 }
 
 body {
@@ -14,12 +13,10 @@ body > .container {
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 .footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	// color: #ffffff;
-	// background-color: #464545;
 
 	.text-muted {
 		// color: #ffffff;
