--- a/www-src/dataplay-ui/app/views/header.html
+++ b/www-src/dataplay-ui/app/views/header.html
@@ -6,7 +6,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a class="navbar-brand" href="/">DataPlay</a>
+		<a class="navbar-brand" ng-href="/home">DataPlay</a>
 	</div>
 	<div class="navbar-collapse collapse">
 		<!-- <ul class="nav navbar-nav">
