Show a bootstrap alert when a request fails

--- a/www-src/dataplay-ui/app/views/charts.html
+++ b/www-src/dataplay-ui/app/views/charts.html
@@ -8,6 +8,15 @@
 		</div>
 	</div>
 
+	<div class="row" ng-show="error">
+		<div class="col-md-9">
+			<div class="alert alert-warning">
+				<h4>There seems to be a problem...</h4>
+				<p>{{error.message}}</p>
+			</div>
+		</div>
+	</div>
+
 	<div class="row">
 		<div class="col-md-6 constrict-graphs">
 			<div class="action-bar">
