--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -139,6 +139,10 @@
 		border-bottom-right-radius: 4px;
 		border-bottom-left-radius: 4px;
 
+		.row {
+			margin: 0 3px;
+		}
+
 		.title {
 			font-weight: 600;
 			padding: 8px 15px;
