--- a/www-src/dataplay-ui/app/views/charts/observations.html
+++ b/www-src/dataplay-ui/app/views/charts/observations.html
@@ -2,18 +2,23 @@
 
 <div class="content">
 	<div class="media" ng-repeat="obsv in userObservations">
-		<span class="left pull-left">
-			<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
+		<div class="row">
+			<span class="text-muted"><small>{{obsv.date}}</small></span>
+		</div>
+		<div class="row">
+			<span class="left pull-left">
+				<img class="media-object" data-src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon" src="http://www.gravatar.com/avatar/{{obsv.user.email}}?d=identicon">
 
-			<div class="votes">
-				<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
-				<span>{{obsv.validationCount}}</span>
-				<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
+				<div class="votes">
+					<i class="glyphicon glyphicon-arrow-up" ng-click="validateObservation(obsv, true)"></i>
+					<span>{{obsv.validationCount}}</span>
+					<i class="glyphicon glyphicon-arrow-down" ng-click="validateObservation(obsv, false)"></i>
+				</div>
+			</span>
+			<div class="media-body">
+				<h4 class="media-heading">{{obsv.user.name}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span></h4>
+				{{obsv.message}}
 			</div>
-		</span>
-		<div class="media-body">
-			<h4 class="media-heading">{{obsv.user.name}} <span class="text-warning"><i class="glyphicon glyphicon-star"></i>{{obsv.user.reputation}}</span> <span class="label label-primary" ng-show="obsv.user.discoverer">Discoverer</span></h4>
-			{{obsv.message}}
 		</div>
 	</div>
 </div>
